--- a/404.html
+++ b/404.html
@@ -5,12 +5,16 @@
   <meta charset="utf-8">
   <title>Page Not Found</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/reset_style.css">
+  <link rel="stylesheet" href="css/erreur_style.css">    
 </head>
 
 <body>
-  <h1>Page Not Found</h1>
-  <p>Sorry, but the page you were trying to view does not exist.</p>
-  <img src="img/bee-evil.svg" alt="evil bee" id="image_erreur">
+    <div id="bloc_erreur">
+      <h1>Page Not Found</h1>
+      <p>Sorry, but the page you were trying to view does not exist.</p>
+      <center><img src="img/bee-evil.svg" alt="evil bee" id="image_erreur"></center>
+    </div>
 </body>
 
 </html>
